# biogram

./: .replit  .requirements.txt  RENDER_DEPLOYMENT.md  build.sh  create_superuser.py  db.sqlite3  manage.py  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt  run.py  run.sh  sample_data.py  server.js
attached_assets/: Pasted--Cardiovascular-Vitals-Heart-rate-current-average-resting-walking-average-Heart-rate-z-1762129612091_1762129612092.txt  Pasted-Build-a-sleek-modern-and-demo-ready-web-app-UX-for-a-health-tech-AI-platform-called-Biogram-Purp-1759806092290_1759806092291.txt
biogram/: asgi.py  settings.py  urls.py  wsgi.py
client/src/: App.tsx  index.css
client/src/components/: ActionChecklist.tsx  ConditionDetailsModal.tsx  HealthSnapshot.tsx  HealthTimeline.tsx  JargonTooltip.tsx  MedicationDetailsModal.tsx  NotificationCenter.tsx  PrepareForAppointmentModal.tsx  PrintTimelineModal.tsx  QuickNoteButton.tsx  SecurityDrawer.tsx  ShareWithProviderModal.tsx  Sidebar.tsx  TimelineEventDetailsModal.tsx  VitalTrendChart.tsx  WearableInsights.tsx
client/src/data/: insights.json
core/: urls.py  views.py
health/: admin.py  models.py  urls.py  views.py
health/migrations/: 0001_initial.py
server/: routes.ts
templates/: base.html
templates/core/: connect_devices.html  dashboard.html  doctor_access.html  doctor_summary.html  home.html  link_records.html  login.html  profile_settings.html  register.html  share_with_doctor.html  upload_documents.html
templates/health/: lab_results.html  medications.html  timeline.html  wearable_insights.html
(+3 files in other folders)
